fixing lint error

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -122,7 +122,7 @@ svg[aria-hidden=true],
   overflow-y: scroll;
 
   .usa-alert {
-    margin-top: 0rem;
+    margin-top: 0;
     margin-bottom: $comment-wrapper-vertical-margin;
   }
 }
