Style guide tweaks to Certification and Dispatch stats pages (#1844)
* change h3 to h4 in stats page and add dashboard text

* go back to h3

* remove obsolete code samples

* adding correct headers for stats pages

* add reference to updated headers in caseflow commons

* fix linting error

--- a/app/views/dispatch_stats/show.html.erb
+++ b/app/views/dispatch_stats/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &gt &nbspDispatch Dashboard<% end %>
+<% content_for :page_title do stats_header end %>
 
 <% content_for :head do %>
     <%= javascript_include_tag 'stats' %>
@@ -13,6 +13,7 @@
 <% end %>
 
 <div class="cf-app-segment cf-app-segment--alt">
+  <h1>Dispatch Dashboard</h1>
   <div class="cf-stats">
     <ul class="cf-tab-navigation">
       <% DispatchStats::INTERVALS.each do |interval| %>
