--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -39,7 +39,7 @@ div {
 }
 
 .cf-sg-content {
-  padding-left: 190px;
+  padding-left: 11em;
 }
 
 .usa-accordion {
@@ -209,5 +209,66 @@ pre {
 .cf-sg-tables-section {
   table:last-child {
     margin-bottom: 6rem;
+  }
+}
+
+.cf-sg-typography-text-styles {
+  position: relative;
+  border: 0;
+  margin-top: 3rem;
+
+  caption {
+    position: absolute;
+    left: -99999px;
+  }
+
+  thead {
+    position: absolute;
+    left: -99999px;
+  }
+
+  tbody {
+    tr {
+      border: 0;
+
+      td {
+        border: 0;
+        margin: 0;
+        padding: 0;
+        vertical-align: top;
+        width: 50%;
+
+        &:first-child {
+          > * {
+            position: relative;
+            top: -.25em;
+          }
+        }
+
+        &:last-child {
+          width: 70%;
+          color: $color-gray;
+          font: 60% Monaco;
+          padding-bottom: 48px;
+          padding-left: 10%;
+        }
+
+        p {
+          margin: 0;
+          padding: 0;
+        }
+
+        span {
+          display: block;
+          white-space: nowrap;
+        }
+      }
+
+      &:last-child {
+        td {
+          padding-bottom: 0;
+        }
+      }
+    }
   }
 }
