adjusted button margin t0 30px

--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -70,6 +70,12 @@ input {
   }
 }
 
+.cf-btn-link {
+  &.cf-adjacent-buttons {
+    margin-right: 30px;
+  }
+}
+
 .copy-note-button {
   margin-top: 17px;
   margin-bottom: 35px;
