Move Manage Establish Claim page to Redux
Did my best to use the conventions that already existed. However, there
are some that aren't consistent:

- Where does the wrapper component with the `<Provider>` in it go? I put mine
  in `/componentName/index.js`, which is what reader does.
- Where is the store created? It's created in the global scope in reader, and inside
  the main component render function in Dispatch and Certification. Since i needed props,
  I followed the Dispatch/Certification way.
- Should there be a seperate `actions` folder with the types of actions & payloads
  that can be dispatched? Seemed like even more unneeeded boilerplate to me so
  I skipped it.
- Should `reducers` be a file or a folder? I made it a folder just so it'd be easier
  to add to later i guess, and to keep consistency with the other apps (minus reader)

--- a/app/views/establish_claims/manager_index.html.erb
+++ b/app/views/establish_claims/manager_index.html.erb
@@ -1,5 +1,4 @@
-<%= react_component("BaseContainer", props: {
-  page: "TasksManagerIndex",
+<%= react_component("ManageEstablishClaim", props: {
   toCompleteCount: to_complete_count,
   completedCountToday: @completed_count_today,
   employeeCount: team_quota.user_count,
