Sandra/layout section (#1876)
* fixed Typo error

* adjusted button margin t0 30px

* fixed lint errors

* proper casing for the Back to preview link

--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -67,6 +67,10 @@ input {
 .cf-btn-link {
   &:hover {
     background: transparent;
+}
+
+  &.cf-adjacent-buttons {
+    margin-right: 30px;
   }
 }
 
