--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -25,6 +25,7 @@ div {
 
 .cf-sg-nav {
   margin-top: 35px;
+  width: 10em;
 
   .current-link {
     border-left: 4px solid $color-primary;
@@ -39,7 +40,7 @@ div {
 }
 
 .cf-sg-content {
-  padding-left: 190px;
+  padding-left: 12em;
 }
 
 .usa-accordion {
