--- a/app/views/establish_claims/assigned_existing_ep.html.erb
+++ b/app/views/establish_claims/assigned_existing_ep.html.erb
@@ -1,7 +1,5 @@
 <% content_for :page_title do task.appeal.task_header end %>
 
-<% veteran_name = task.appeal.veteran_full_name %>
-
 <%= react_component('BaseContainer', props: {
     availableTasks: tasks.any_assignable_to?(current_user),
     buttonText: start_text,
@@ -11,5 +9,5 @@
     totalCasesCompleted: user_quota.tasks_completed_count,
     employeeCount: team_quota.user_count,
     totalCasesToComplete: to_complete_count,
-    veteranName: veteran_name
+    veteranName: task.appeal.veteran_full_name
 }) %>
