--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -257,6 +257,7 @@ svg[aria-hidden=true],
   margin-bottom: 25px;
   border-image: none;
   z-index: 5;
+  overflow: hidden;
 }
 
 .cf-label {
@@ -415,4 +416,8 @@ input[type="search"].cf-search-input-with-close {
   margin-left: -20px;
   margin-top: 6px;
   position: absolute;
+}
+
+.cf-pdf-page-hidden {
+  visibility: hidden;
 }
