--- a/app/views/establish_claims/complete.html.erb
+++ b/app/views/establish_claims/complete.html.erb
@@ -1,8 +1,5 @@
 <% content_for :page_title do task.appeal.task_header end %>
 
-<% second_header = task.appeal.veteran_full_name + "'s End Product (" + task.appeal.sanitized_vbms_id + ') has been created.'
-   second_header = task.appeal.veteran_full_name + "'s claim (" + task.appeal.sanitized_vbms_id + ') has been processed' if task.special_issue_emailed? or task.special_issue_not_emailed? %>
-
 <%= react_component("BaseContainer", props: {
     availableTasks: tasks.any_assignable_to?(current_user),
     buttonText: start_text,
@@ -12,5 +9,5 @@
     totalCasesCompleted: user_quota.tasks_completed_count,
     employeeCount: team_quota.user_count,
     totalCasesToComplete: to_complete_count,
-    secondHeader: second_header
+    veteranName: task.appeal.veteran_full_name
 }) %>
