Add text area component to style guide (#1946)
* add textarea

* quick fixes

* fix lint errors

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -291,3 +291,12 @@ select {
 .cf-font-light {
   font-weight: 300;
 }
+
+// add to commons
+.cf-form-textarea {
+  margin-bottom: 40px;
+
+  p {
+    margin-top: 0;
+  }
+}
