added reader to index page

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -6,5 +6,6 @@
   <ul id="toc" class="usa-unstyled-list">
     <li><a href="/certification/help">Certification Help</a></li>
     <li><a href="/dispatch/help">Dispatch Help</a></li>
+    <li><a href="/reader/help">Reader Help</a></li>
   </ul>
 </div>
