--- a/app/views/help/reader.html.erb
+++ b/app/views/help/reader.html.erb
@@ -15,7 +15,7 @@
   <div class="cf-help-divider"></div>
   
   <ul id="toc" class="usa-unstyled-list">
-    <li><a href="#what-is-caseflow-reader">1. What is Reader?</a></li>
+    <li><a href="#what-is-caseflow-reader">1. What is Caseflow Reader?</a></li>
     <li><a href="#how-was-reader-developed">2. How was Reader developed?</a></li>
     <li><a href="#how-to-access-reader">3. How do I access Reader?</a></li>
     <li><a href="#start-a-case">4. How do I start a case in Reader?</a></li>
@@ -51,110 +51,112 @@
   <h2 id="how-to-access-reader?">3. How do I access Reader?</h2>
   <p>
     You'll need to request access to Reader from your ISO by updating your 8824e form. 
-    Once you've successfully gained access to Reader by updating your 8824e form, You can access Reader using the following link in Firefox. You'll see a pop window. Select the option to make an exception. Once on the login page, use your VBMS credentials to log in to Reader. https://appeals.cf.ds.va.gov/reader/appeal/<vacols_id>/documents. You'll need the VACOLS ID of the case you want to start reviewing. See the question below for more details about starting a new case.
+    Once you've successfully gained access to Reader by updating your 8824e form, You can access Reader using the following link in Firefox. You'll see a pop window. Select the option to make an exception. Once on the login page, use your VBMS credentials to log in to Reader.<a href= 'https://appeals.cf.ds.va.gov/reader/appeal' target="_blank"> https://appeals.cf.ds.va.gov/reader/appeal</a>. You'll need the VACOLS ID of the case you want to start reviewing. See the question below for more details about starting a new case.
   </p>
 
   <h2 id="start-a-case?">4. How do I start a case in Reader?</h2>
   <P>
-    To start a case, open Firefox, and paste the following URL into the browser without hitting enter: https://appeals.cf.ds.va.gov/reader/appeal/1234567/documents. You'll need to replace the numbers "1234567" in the URL with the 7-digit number from VACOLS for the next case you want to work. For example, for a case with the VACOLS ID 3344556, open Firefox and navigate to https://appeals.cf.ds.va.gov/reader/appeal/3344556/documents to access the case.
+    To start a case, open Firefox, and paste the following URL into the browser without hitting enter: <a href='https://appeals.cf.ds.va.gov/reader/appeal/1234567/documents' target="_blank"> https://appeals.cf.ds.va.gov/reader/appeal/1234567/documents </a>. You'll need to replace the numbers "1234567" in the URL with the 7-digit number from VACOLS for the next case you want to work. For example, for a case with the VACOLS ID 3344556, open Firefox and navigate to <a href ='https://appeals.cf.ds.va.gov/reader/appeal/3344556/documents' target="_blank"> https://appeals.cf.ds.va.gov/reader/appeal/3344556/documents </a> to access the case.
   </P>
 
-    <P> 
-      To find the VACOLS ID, open VACOLS, enter the Veteran’s claim file number, and hit the Enter key. In the upper right-hand corner of the VACOLS Appeal Screen, locate the gray, seven-digit number. This is the VACOLS ID. Replace "1234567" with the 7 digit number and hit enter. 
-    </P>
+  <P> 
+    To find the VACOLS ID, open VACOLS, enter the Veteran’s claim file number, and hit the Enter key. In the upper right-hand corner of the VACOLS Appeal Screen, locate the gray, seven-digit number. This is the VACOLS ID.
+    Replace "1234567" with the 7 digit number and hit enter. 
+  </P>
 
-    <h2 id="where-documents-come-from?">5. Where do the documents in Reader come from?</h2>
+  <h2 id="where-documents-come-from?">5. Where do the documents in Reader come from?</h2>
 
-    <P>
-      Reader pulls documents directly from the VBMS eFolder.
-    </P>
+  <P>
+    Reader pulls documents directly from the VBMS eFolder.
+  </P>
 
-    <h2 id="how-do-I-search-for-a-document?">6. How do I search for a document?</h2>
+ <h2 id="how-do-I-search-for-a-document?">6. How do I search for a document?</h2>
 
-    <P>
-     You can enter a Document Type into the search bar on the upper lefthand corner of the screen, and you'll see any matching documents appear below as you type.
-    </P>
+  <P>
+    You can enter a Document Type into the search bar on the upper lefthand corner of the screen, and you'll see any matching documents appear below as you type.
+  </P>
 
-    <h2 id="can-I-search-for-a-document-based-on-its-comments?">7. What kinds of searches does Reader support? </h2>
+  <h2 id="can-I-search-for-a-document-based-on-its-comments?">7. What kinds of searches does Reader support? </h2>
 
-    <P>
-     You can search by comment text, issue tags, category labels, or metadata from VBMS (e.g., the Document Type). You cannot search within a document's text for now.
-    </P> 
+  <P>
+    You can search by comment text, issue tags, category labels, or metadata from VBMS (e.g. the Document Type). You cannot search within a document's text for now.
+  </P> 
 
-    <h2 id="how-do-I-view-virtual-va-documents-within-reader?">8. Can I view Virtual VA documents within Reader?</h2>
+  <h2 id="how-do-I-view-virtual-va-documents-within-reader?">8. Can I view Virtual VA documents within Reader?</h2>
 
-    <p>
-     No, Virtual VA documents cannot currently be viewed in Reader. This functionality may be available in the future.
-    </p>
+  <p>
+    No, Virtual VA documents cannot currently be viewed in Reader. This functionality may be available in the future.
+  </p>
 
-    <h2 id="documents-read-in-document-list?">9. How do I know which documents I've read in my documents list?</h2>
+  <h2 id="documents-read-in-document-list?">9. How do I know which documents I've read in my documents list?</h2>
 
-    <p>
-      On the documents list page, the Document Type will initially appear in bold. Once you've read the document, the text will appear in regular font. If a different attorney or judge opens the same case, the documents will reset to bold ("unread"). Within the document itself, the categories, comments and annotations will remain if a different user views the document.
-    </p>
+  <p>
+    On the documents list page, the Document Type will initially appear in bold. Once you've read the document, the text will appear in regular font. If a different attorney or judge opens the same case, the documents will reset to bold ("unread"). Within the document itself, the categories, comments and annotations will remain if a different user views the document.
+  </p>
 
-    <h2 id="tab-list-view?">10. Can I open the document viewer in a separate tab, leaving the document list open in its own tab?</h2> 
+  <h2 id="tab-list-view?">10. Can I open the document viewer in a separate tab, leaving the document list open in its own tab?</h2> 
 
-    <p>
-      Yes you can open a new tab by clicking on the doc type name in the pdf viewer. You can also click on the Reader icon to go back to all documents.
-    </p>
+  <p>
+    Yes you can open a new tab by clicking on the doc type name in the pdf viewer. You can also click on the Reader icon to go back to all documents.
+  </p>
 
-    <h2 id="add-a-comment?">11. How do I add a comment to a document in Reader?</h2>
+  <h2 id="add-a-comment?">11. How do I add a comment to a document in Reader?</h2>
 
-    <p>
-      Go to the document page where you'd like to add a comment. On the righthand menu, you'll see a section where you can read add, edit or delete comments. Click on the "Add a comment" button and place the comment wherever you'd like to add it on the page by clicking. Once added, comments can be dragged and moved to different places within the document. From the documents list page, you can see how many comments have been added to a single document.
-    </p>
+  <p>
+    Go to the document page where you'd like to add a comment. On the righthand menu, you'll see a section where you can read add, edit or delete comments. Click on the "Add a comment" button and place the comment wherever you'd like to add it on the page by clicking. Once added, comments can be dragged and moved to different places within the document. From the documents list page, you can see how many comments have been added to a single document.
+  </p>
 
-    <h2 id="delete-comments-in-reader?">12. How do I delete comments in Reader?</h2>
+  <h2 id="delete-comments-in-reader?">12. How do I delete comments in Reader?</h2>
 
-    <p>
-      While within a document, every comment box in the righthand menu contains a "delete" link above it, which you can click to remove the comment.
-    </p>
+  <p>
+    While within a document, every comment box in the righthand menu contains a "delete" link above it, which you can click to remove the comment.
+  </p>
 
-    <h2 id="how-do-issue-tags-work?">13. How do issue tags work?</h2>
+  <h2 id="how-do-issue-tags-work?">13. How do issue tags work?</h2>
 
-    <p>
-      You can add issue tags to documents to help you categorize, and later filter, documents by issue(s) as you review evidence. When you create an issue tag for the first time, it will appear in the dropdown menu so you can easily add it to other documents. Issue tags cannot be deleted from the dropdown menu for a case once added, but you can delete an individual issue tag within a document (there is no “delete all” issue tags function).  Issue tags do not persist across cases.
-    </p> 
-    <h2 id="sort-by-issue-tags?">14. Can I sort the documents list by issue tag?</h2>
+  <p>
+    You can add issue tags to documents to help you categorize, and later filter, documents by issue(s) as you review evidence. When you create an issue tag for the first time, it will appear in the dropdown menu so you can easily add it to other documents. Issue tags cannot be deleted from the dropdown menu for a case once added, but you can delete an individual issue tag within a document (there is no “delete all” issue tags function).  Issue tags do not persist across cases.
+  </p> 
+  <h2 id="sort-by-issue-tags?">14. Can I sort the documents list by issue tag?</h2>
 
-    <p>
-      Yes, you can click on the filter icon next to the "issue tags" header on the document list page. Selecting one or more issue tags will filter the documents view. You can return to the complete documents list view by unchecking the issue tag(s) you selected.
-    </p>
+  <p>
+    Yes, you can click on the filter icon next to the "issue tags" header on the document list page. Selecting one or more issue tags will filter the documents view. You can return to the complete documents list view by unchecking the issue tag(s) you selected.
+  </p>
 
-    <h2 id="complete-a-case?">15. How do I complete a case in Reader?</h2>
+  <h2 id="complete-a-case?">15. How do I complete a case in Reader?</h2>
 
-    <p>
-      After you complete a decision on an appeal, you should follow your regular process for sharing your decision  document with your VLJ. If your VLJ has access to Reader, s/he will see your annotations when s/he opens the case in Reader.
-    </p>
-    <h2 id="complete-a-review?">16. What happens if I cannot complete a review in one sitting?</h2>
+  <p>
+    After you complete a decision on an appeal, you should follow your regular process for sharing your decision  document with your VLJ. If your VLJ has access to Reader, she/he will see your annotations when she/he opens the case in Reader.
+  </p>
 
-    <p>
-      Reader will automatically save any comments, categories, or issue tags you've added during the review process, so you can pick up where you left off the next time you access the application.
-    </p>
+  <h2 id="complete-a-review?">16. What happens if I cannot complete a review in one sitting?</h2>
 
-    <h2 id="encounter-problems?">17. What should I do if I encounter problems?</h2>
+  <p>
+    Reader will automatically save any comments, categories, or issue tags you've added during the review process, so you can pick up where you left off the next time you access the application.
+  </p>
 
-    <p>
-      If you encounter any problems while using Reader, contact the Caseflow Support Team by calling 1-844-876-5548. 
-    </p>
+  <h2 id="encounter-problems?">17. What should I do if I encounter problems?</h2>
 
-    <h2 id="share-feedback?">18. How do I share my feedback for improving Reader?</h2>
+  <p>
+    If you encounter any problems while using Reader, contact the Caseflow Support Team by calling 1-844-876-5548. 
+  </p>
 
-    <p>
-      You can share feedback using daily diary notes. The prompt for diary notes will be sent to you automatically via email through SurveyMonkey. If you have an urgent issue, you can contact the Caseflow Support Team at 1-844-876-5548 to provide feedback at any time. 
-    </p>
+  <h2 id="share-feedback?">18. How do I share my feedback for improving Reader?</h2>
 
-    <h2 id="need-help?">19. What if I still need help?</h2>
+  <p>
+    You can share feedback using daily diary notes. The prompt for diary notes will be sent to you automatically via email through SurveyMonkey. If you have an urgent issue, you can contact the Caseflow Support Team at 1-844-876-5548 to provide feedback at any time. 
+  </p>
 
-    <p>
-      If you still encounter issues or have questions that aren't answered here, reach out to the Caseflow Support Team by calling 1-844-876-5548.
-    </p>
+  <h2 id="need-help?">19. What if I still need help?</h2>
+
+  <p>
+    If you still encounter issues or have questions that aren't answered here, reach out to the Caseflow Support Team by calling 1-844-876-5548.
+  </p>
   
 </div>
 
 <div class="cf-app-segment">
- <div class="cf-push-left">
-  <a href ="#top">Back To Top</a>
+  <div class="cf-push-left">
+    <a href ="#top">Back To Top</a>
   </div>
 </div>
