add styles back

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -273,6 +273,10 @@ select {
   }
 }
 
+.usa-alert.no-title {
+  background-position: 1rem 1.5rem;
+}
+
 .cf-no-styling-list {
   margin: 0;
   padding: 0;
