Fixed adjacent buttons margin 30px (#1967)
* fixed adjacent buttons margin

* fixed lint errors

* removed adjacent button from main scss

--- a/app/assets/stylesheets/_dispatch.scss
+++ b/app/assets/stylesheets/_dispatch.scss
@@ -36,6 +36,12 @@
   vertical-align: top;
 }
 
+.cf-btn-link {
+  &.cf-adjacent-buttons {
+    margin-right: 30px;
+  }
+}
+
 .inline-value {
   display: inline-block;
   width: 55%;
