--- a/app/views/test/users/index.html.erb
+++ b/app/views/test/users/index.html.erb
@@ -20,6 +20,8 @@
       <p><a href="/certifications/new/001ERR">Unable to Certify</a></p>
       <h2>Reader</h2>
       <p><a href="/reader/appeal/reader_id1/documents">Case File</a></p>
+      <h2>Hearings</h2>
+      <p><a href="/hearings/dockets">Hearing Prep</a></p>
       <h2>Misc.</h2>
       <p><a href="/styleguide">Commons Style Guide</a></p>
       <p><a href="/stats">Stats</a></p>
