added test to help page

--- a/app/views/help/reader.html.erb
+++ b/app/views/help/reader.html.erb
@@ -8,21 +8,21 @@
    <h1 id="training-videos">Training Videos</h1>
      <div class="cf-help-divider"></div>
         
-        <p><font size="6">Coming Soon</font></p>
+      <div class="cf-lead-paragraph">Coming Soon</div>
    
   <h1 id="faq">Frequently Asked Questions</h1>
 
   <div class="cf-help-divider"></div>
   
   <ul id="toc" class="usa-unstyled-list">
-    <li><a href="#what-is-caseflow-reader">1. What is Caseflow Reader?</a></li>
+    <li><a href="#what-is-caseflow-reader">1. What is Caseflow Reader (or Reader)?</a></li>
     <li><a href="#how-was-reader-developed">2. How was Reader developed?</a></li>
     <li><a href="#how-to-access-reader">3. How do I access Reader?</a></li>
     <li><a href="#start-a-case">4. How do I start a case in Reader?</a></li>
     <li><a href="#where-documents-come-from">5. Where do the documents in Reader come from?</a></li>
     <li><a href="#how-do-I-search-for-a-document">6. How do I search for a document?</a></li>
     <li><a href="#search-for-a-document-based-on-its-comments">7. Can I search for a document based on its comments?</a></li>
-    <li><a href="#view-virtual-va">8. How do I view virtual VA documents within Reader?</a></li>
+    <li><a href="#view-virtual-va">8. Can I view virtual VA documents within Reader?</a></li>
     <li><a href="#documents-read-in-document-list">9. How do I know which documents I have read in my document list?</a></li>
     <li><a href="#tab-list-view">10. Can I open the document viewer in a separate tab,
      leaving the document list open in its own tab?</a></li>
@@ -37,10 +37,10 @@
     <li><a href="#need-help">19. What if I still need help?</a></li> 
   </ul>
   <div class="cf-help-divider"></div>
-  <h2 id="what-is-caseflow-reader">1. What is Caseflow Reader?</h2>
+  <h2 id="what-is-caseflow-reader">1. What is Caseflow Reader (or Reader)?</h2>
 
   <p>
-    Caseflow Reader ("Reader") is a web-based prototype developed by the US Digital Service at VA that is designed to facilitate the attorney document review process for BVA appeals decisions. The application allows attorneys to review all of the eFolder documents associated with a Veteran's appeal and add categories, issue tags and comments to the documents to organize and streamline their review process. 
+    Caseflow Reader (or Reader) is a web-based prototype developed by the US Digital Service at VA that is designed to facilitate the attorney document review process for BVA appeals decisions. The application allows attorneys to review all of the eFolder documents associated with a Veteran's appeal and add categories, issue tags and comments to the documents to organize and streamline their review process. 
   </p>
 
   <h2 id="how-was-reader-developed">2. How was Reader developed?</h2>
@@ -52,7 +52,7 @@
   <h2 id="how-to-access-reader">3. How do I access Reader?</h2>
   <p>
     You'll need to request access to Reader from your ISO by updating your 8824e form. 
-    Once you've successfully gained access to Reader by updating your 8824e form, You can access Reader using the following link in Firefox. You'll see a pop window. Select the option to make an exception. Once on the login page, use your VBMS credentials to log in to Reader.<a href= 'https://appeals.cf.ds.va.gov/reader/appeal' target="_blank"> https://appeals.cf.ds.va.gov/reader/appeal</a>. You'll need the VACOLS ID of the case you want to start reviewing. See the question below for more details about starting a new case.
+    Once you've successfully gained access to Reader by updating your 8824e form, You can access Reader using the following link in Firefox. You'll see a pop window. Select the option to make an exception. Once on the login page, use your VBMS credentials to log in to Reader.<a href= 'https://appeals.cf.ds.va.gov/reader/appeal' target="_blank"> https://appeals.cf.ds.va.gov/reader/appeal/vacols_id/documents</a>. You'll need the VACOLS ID of the case you want to start reviewing. See the question below for more details about starting a new case.
   </p>
 
   <h2 id="start-a-case">4. How do I start a case in Reader?</h2>
@@ -83,7 +83,7 @@
     You can search by comment text, issue tags, category labels, or metadata from VBMS (e.g. the Document Type). You cannot search within a document's text for now.
   </P> 
 
-  <h2 id="view-virtual-va">8.How do I view virtual VA documents within Reader?</h2>
+  <h2 id="view-virtual-va">8. Can I view virtual VA documents within Reader?</h2>
 
   <p>
     No, Virtual VA documents cannot currently be viewed in Reader. This functionality may be available in the future.
@@ -98,7 +98,7 @@
   <h2 id="tab-list-view">10. Can I open the document viewer in a separate tab, leaving the document list open in its own tab?</h2> 
 
   <p>
-    Yes you can open a new tab by clicking on the doc type name in the pdf viewer. You can also click on the Reader icon to go back to all documents.
+    Yes you can open a new tab by clicking on the doc type name in the upper right-hand corner when viewing a document. You can also click on the Reader icon to go back to all documents.
   </p>
 
   <h2 id="add-a-comment">11. How do I add a comment to a document in Reader?</h2>
