--- a/app/views/help/dispatch.html.erb
+++ b/app/views/help/dispatch.html.erb
@@ -8,7 +8,7 @@
    <h1 id="training-videos">Training Videos</h1>
      <div class="cf-help-divider"></div>
         
-        <p><font size="6">Coming Soon</font></p>
+      <div class="cf-lead-paragraph">Coming Soon</div>
    
     <h1 id="faq">Frequently Asked Questions</h1>
 
