--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -213,6 +213,15 @@ select {
   @include animation(spin 6s linear infinite);
 }
 
+.cf-lock-icon {
+  vertical-align: middle;
+}
+
+// Candidate for commons
+.cf-btn-link.cf-no-padding {
+  padding: 0;
+}
+
 .cf-react-loading-indicator {
   background-color: $color-white;
   border-radius: 5px;
@@ -308,6 +317,13 @@ select {
   p {
     margin-top: 0;
   }
+}
+
+// candidate for commons
+// Re-assess if we need a number field of a different size
+[type=number] {
+  width: 60px;
+  height: 35px;
 }
 
 // add to commons
