added Back to top

--- a/app/views/help/certification.html.erb
+++ b/app/views/help/certification.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &#124 &nbspCertification Help<% end %>
+<% content_for :page_title do page_title("Certification Help") end %>
 
 <div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1>Caseflow Certification Help</h1>
@@ -331,4 +331,11 @@
     1-855-NSD-HELP (1-855-673-4357). You can also provide feedback for the Caseflow team
     by clicking the "Send feedback" link in the Caseflow Certification app.
   </p>
+
+  </div>
+
+  <div class="cf-app-segment">
+  <div class="cf-push-left">
+    <a href ="#top">Back To Top</a>
+  </div>
 </div>
