Reader Help Page (#1981)
* added reader help page

* added reader to index page

* fixed typo errors for the help page

* added test to help page

* added code to reader

* fixed lint errors

* added Back to top

* fixed lint errors

--- a/app/views/help/dispatch.html.erb
+++ b/app/views/help/dispatch.html.erb
@@ -1,6 +1,6 @@
-<% content_for :page_title do %>&nbsp &#124 &nbspDispatch Help<% end %>
+<% content_for :page_title do page_title("Dispatch Help") end %>
 
-<div class="cf-app-segment cf-app-segment--alt cf-help-content cf-dispatch">
+<div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1 id="#top">Caseflow Dispatch Help</h1>
   
   <p>Here you will find <a href="#training-videos"> Training Videos</a> and <a href="#faq"> FAQs</a> to Dipatch. If you still need help please contact the Caseflow Product Support Team by calling 1-844-876-5548. We will assist you as quickly as possible. </p>
@@ -8,7 +8,7 @@
    <h1 id="training-videos">Training Videos</h1>
      <div class="cf-help-divider"></div>
         
-        <p><font size="6">Coming Soon</font></p>
+      <div class="cf-lead-paragraph">Coming Soon</div>
    
     <h1 id="faq">Frequently Asked Questions</h1>
 
