Fetch metadata after loading the page

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -421,3 +421,7 @@ input[type="search"].cf-search-input-with-close {
 .cf-pdf-page-hidden {
   visibility: hidden;
 }
+
+.cf-pdf-center-text {
+  text-align: center;
+}
