Allow fuzzy matching of SOC and SSOC
connects #1889

--- a/app/views/certifications/_document_match.html.erb
+++ b/app/views/certifications/_document_match.html.erb
@@ -6,8 +6,8 @@
 %>
 
 <tr id="<%= name.downcase.parameterize %>-match">
-  <td> <%= match ? svg_icon(:found) : svg_icon(:missing) %> </td>
+  <td> <%= document.matching? ? svg_icon(:found) : svg_icon(:missing) %> </td>
   <td> <%= name %> </td>
-  <td> <%= date.to_formatted_s(:short_date) %> </td>
-  <td> <%= match ? date.to_formatted_s(:short_date) : "Not found" %> </td>
+  <td> <%= document.vacols_date.to_formatted_s(:short_date) %> </td>
+  <td> <%= document.receipt_date ? document.receipt_date.to_formatted_s(:short_date) : "Not found" %> </td>
 </tr>
