modified the border margins

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -267,6 +267,7 @@ select {
 
 .cf-bottom-border {
   border-bottom: 1px solid $color-gray-light;
+  margin: 40px auto;
 }
 
 .cf-bold-ordered-list {
