WIP: Hearings Schedule

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,4 +21,5 @@
  *= require react/_react_styles_root.scss
  *= require _dispatch.scss
  *= require _certification_v2.scss
+ *= require _hearings.scss
  */
