--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -7,5 +7,6 @@
     <li><a href="/certification/help">Certification Help</a></li>
     <li><a href="/dispatch/help">Dispatch Help</a></li>
     <li><a href="/reader/help">Reader Help</a></li>
+    <li><a href="/hearings/help">Hearings Help</a></li>
   </ul>
 </div>
