--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -153,7 +153,10 @@ $tag-backgrond-color: #d6d7d9;
       padding-bottom: 0;
       margin: 0;
       max-height: 325px;
-      overflow: scroll;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      word-break: break-word;
+      max-width: 218px;
 
       .cf-category-selector {
         display: flex;
