--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -1,6 +1,6 @@
 <%# react_component goes here %>
 
-<% content_for :page_title do %>&nbsp &gt &nbspSchedule<% end %>
+<% content_for :page_title do page_title('Schedule') end %>
 
 <% content_for :right_actions do %><%= print_link %><% end %>
 
