--- a/app/views/help/hearings.html.erb
+++ b/app/views/help/hearings.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title do %>&nbsp &#124 &nbspHearings Help<% end %>
+<% content_for :page_title do page_title('Hearings Help') end %>
 
 <div class="cf-app-segment cf-app-segment--alt cf-help-content">
   <h1>Caseflow Hearings Help</h1>
