fixing top toolbar

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -140,11 +140,11 @@ svg[aria-hidden=true],
   position: absolute;
   z-index: 15;
   opacity: 1;
-  padding: 15px 20px;
+  padding: 15px 17px;
 
   .category-icons-and-doc-type {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
   }
 }
 
