WIP: Hearings Schedule (#2043)
* WIP: Hearings Schedule

* Unduplicated initial state; tweaked store connector

* Template cleanup; renamed Redux core component; added specs

* New method to get dockets; tweaked UI display; improved spec

* VACOLS id unnecessary for spec

--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -1,2 +1,11 @@
 <%# react_component goes here %>
-<p><%= current_user_dockets.map(&:to_hash).to_s %></p>
+
+<% content_for :page_title do page_title('Schedule') end %>
+
+<% content_for :right_actions do %><%= print_link %><% end %>
+
+<%= react_component("Hearings", props: {
+  hearings: {
+    dockets: current_user_dockets.map(&:to_hash)
+  }
+}) %>
