--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= react_component("Hearings", props: {
   hearings: {
-    veteran_line_judge: current_user.to_hash,
+    veteran_law_judge: current_user.to_hash,
     dockets: current_user_dockets.map(&:to_hash)
   }
 }) %>
