--- a/app/views/certifications/_cancel_certification_modal.html.erb
+++ b/app/views/certifications/_cancel_certification_modal.html.erb
@@ -29,7 +29,7 @@
             "Other"
           ],
           question_name: "cancellationReason",
-          label: "Why can't be this case certified in Caseflow" %>
+          label: "Why can't this case be certified in Caseflow" %>
 
         <%= f.text_area :other_reason,
           question_name: "otherReason", maxlength: 2000,
