--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -8,13 +8,14 @@ $tag-backgrond-color: #d6d7d9;
   .section--no-search-results {
     .cf-app-segment--alt {
       border: none;
-      margin-top: 0px;
+      margin-top: 0;
 
       .cf-msg-screen-deck {
         word-break: break-word;
       }
     }
   }
+  
   .table-icon {
     margin: 1px;
     margin-left: 5px;
