--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -308,6 +308,22 @@ svg[aria-hidden=true],
   color: $bookmark-pink;
 }
 
+.cf-pdf-buttons-center {
+  $spacing: 10px;
+  .page-progress-indicator {
+    margin-right: $spacing;
+  }
+  .doc-list-progress-indicator {
+    margin-left: $spacing;
+
+    .filter-icon {
+      margin-right: $spacing/2;
+      position: relative;
+      top: 1px;
+    }
+  }
+}
+
 .cf-pdf-bookmark-layperson {
   color: $bookmark-green;
 }
