Added current user as VLJ to Hearing Schedule page (#2123)
* Added current user as VLJ to Hearing Schedule page

Connects #2045

* Added to_hash() to User

* It's veteran_law_judge

--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -6,6 +6,7 @@
 
 <%= react_component("Hearings", props: {
   hearings: {
+    veteran_law_judge: current_user.to_hash,
     dockets: current_user_dockets.map(&:to_hash)
   }
 }) %>
