--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -6,10 +6,14 @@ $tag-backgrond-color: #d6d7d9;
 
 .section--document-list {
   .section--no-search-results {
+    .cf-msg-screen-text {
+      display: none;
+    }
+
     .cf-app-segment--alt {
       border: none;
       margin-top: 0;
-      padding: 4rem 4rem 0;
+      padding: 4rem 4rem 2rem;
 
       .cf-msg-screen-deck {
         word-break: break-word;
