--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -154,18 +154,34 @@ svg[aria-hidden=true],
   opacity: 1;
   bottom: 0;
   padding: 0 20px;
-  line-height: 50px;
 
   display: flex;
+  align-items: center;
 
-  $button-label-spacing: 10px;
+  button {
+    display: flex;
 
-  .left-button-label {
-    margin-left: $button-label-spacing;
+    $button-label-spacing: 10px;
+
+    .left-button-label {
+      margin-left: $button-label-spacing;
+    }
+
+    .right-button-label {
+      margin-right: $button-label-spacing;
+    }
   }
 
-  .right-button-label {
-    margin-right: $button-label-spacing;
+  // We want the buttons to be 40px from the outer edge of the toolbar.
+  // Other margins that are involved add up to 28px, so we add an 
+  // additional margin to make it 40.
+  $outer-margin: 12px;
+
+  .cf-pdf-footer-buttons-right {
+    margin-right: $outer-margin;
+  }
+  .cf-pdf-footer-buttons-left {
+    margin-left: $outer-margin;
   }
 
   .cf-pdf-buttons-center {
@@ -192,21 +208,6 @@ svg[aria-hidden=true],
 
 .cf-comment-cursor {
   cursor: copy;
-}
-
-.cf-pdf-buttons {
-  &-left {
-    min-height: 1px;
-    text-align: left;
-  }
-
-  &-right {
-    text-align: right;
-  }
-
-  &-center {
-    text-align: center;
-  }
 }
 
 .cf-pdf-bookmarks {
