--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -241,12 +241,15 @@ svg[aria-hidden=true],
   line-height: normal;
 
   &:hover {
+    // Defined in USWDS
+    $primary-alt: #02bfe7;
+
     text-decoration: none;
     background-color: transparent;
-    color: $color-focus;
+    color: $primary-alt;
 
     svg g {
-      fill: $color-focus;
+      fill: $primary-alt;
     }
   }
 
