added styles to main scss

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -369,3 +369,12 @@ select {
     }
   }
 }
+
+.usa-search {
+  &.usa-search-medium,
+  &.usa-search-big {
+    [type="submit"] {
+      background-image: none;
+    } 
+  } 
+}
