--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -232,3 +232,10 @@ pre {
     font-size: 24px;
   }
 }
+
+.cf-sg-searchbar-example {
+  label.usa-sr-only {
+    position: relative;
+    left: auto;
+  }
+}
