--- a/app/assets/stylesheets/react/_comment_icon.scss
+++ b/app/assets/stylesheets/react/_comment_icon.scss
@@ -1,6 +1,7 @@
 .commentIcon-container {
   position: absolute;
   z-index: 10;
-  width: 50px;
-  height: 50px;
+  // These dimensions need to match the comment icon SVG dimensions.
+  width: 40px;
+  height: 40px;
 }
