Fixing edging issues

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -416,7 +416,7 @@ svg[aria-hidden=true],
 
   // We will manually draw the cursor with the annotation icon.
   * {
-    cursor: none;
+    // cursor: none;
   }
 }
 
