--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -146,6 +146,21 @@ svg[aria-hidden=true],
     display: flex;
     justify-content: flex-end;
   }
+
+  .cf-pdf-buttons {
+    &-left {
+      min-height: 1px;
+      text-align: left;
+    }
+
+    &-right {
+      text-align: right;
+    }
+
+    &-center {
+      text-align: center;
+    }
+  }
 }
 
 .cf-pdf-footer {
@@ -154,26 +169,61 @@ svg[aria-hidden=true],
   opacity: 1;
   bottom: 0;
   padding: 0 20px;
-  line-height: 50px;
+
+  display: flex;
+  align-items: center;
+
+  button {
+    display: flex;
+
+    $button-label-spacing: 10px;
+
+    .left-button-label {
+      margin-left: $button-label-spacing;
+    }
+
+    .right-button-label {
+      margin-right: $button-label-spacing;
+    }
+  }
+
+  // We want the buttons to be 40px from the outer edge of the toolbar.
+  // Other margins that are involved add up to 28px, so we add an
+  // additional margin to make it 40.
+  $outer-margin: 12px;
+
+  .cf-pdf-footer-buttons-right {
+    margin-right: $outer-margin;
+  }
+
+  .cf-pdf-footer-buttons-left {
+    margin-left: $outer-margin;
+  }
+
+  .cf-pdf-buttons-center {
+    $spacing: 25px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    .page-progress-indicator {
+      margin-right: $spacing;
+    }
+
+    .doc-list-progress-indicator {
+      margin-left: $spacing;
+
+      .filter-icon {
+        margin-right: $spacing / 2;
+        position: relative;
+        top: 1px;
+      }
+    }
+  }
 }
 
 .cf-comment-cursor {
   cursor: copy;
-}
-
-.cf-pdf-buttons {
-  &-left {
-    min-height: 1px;
-    text-align: left;
-  }
-
-  &-right {
-    text-align: right;
-  }
-
-  &-center {
-    text-align: center;
-  }
 }
 
 .cf-pdf-bookmarks {
@@ -193,7 +243,11 @@ svg[aria-hidden=true],
   &:hover {
     text-decoration: none;
     background-color: transparent;
-    color: $color-focus;
+    color: $color-primary-alt;
+
+    svg g {
+      fill: $color-primary-alt;
+    }
   }
 
   &:focus {
@@ -306,24 +360,6 @@ svg[aria-hidden=true],
 
 .cf-pdf-bookmark-va-medial {
   color: $bookmark-pink;
-}
-
-.cf-pdf-buttons-center {
-  $spacing: 25px;
-
-  .page-progress-indicator {
-    margin-right: $spacing;
-  }
-
-  .doc-list-progress-indicator {
-    margin-left: $spacing;
-
-    .filter-icon {
-      margin-right: $spacing / 2;
-      position: relative;
-      top: 1px;
-    }
-  }
 }
 
 .cf-pdf-bookmark-layperson {
