--- a/app/assets/stylesheets/_certification_v2.scss
+++ b/app/assets/stylesheets/_certification_v2.scss
@@ -1,8 +1,10 @@
+$alert-red: #cd2026;
+
 .form9-viewer {
   height: 500px;
 }
 
 .error-status {
-  color: #cd2026;
+  color: $alert-red;
   font-weight: 700;
 }
