--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -232,3 +232,14 @@ pre {
     font-size: 24px;
   }
 }
+
+.cf-text-align {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.cf-dispatch-loader {
+  margin-top: 40px;
+}
+
+
