change link function to have a verb and css refactoring

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -251,12 +251,8 @@ svg[aria-hidden=true],
   }
 
   svg {
-    g {
-      g {
-        &:hover {
-          fill: $color-focus;
-        }
-      }
+    g g:hover {
+      fill: $color-focus;
     }
 
     vertical-align: middle;
