--- a/app/assets/stylesheets/_style_guide.scss
+++ b/app/assets/stylesheets/_style_guide.scss
@@ -232,3 +232,16 @@ pre {
     font-size: 24px;
   }
 }
+
+.cf-sg-loader {
+  .loadingContainer-positioning {
+    height: auto;
+  }
+}
+
+.cf-image-loader {
+  width: 400px;
+  height: 400px;
+}
+
+
