Fixing lint and tests

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -374,12 +374,9 @@ svg[aria-hidden=true],
     height: 22px;
     display: inline-block;
     color: white;
-    padding: 5px;
     text-align: right;
     background-color: rgb(91, 97, 107);
-    border-width: 1px;
-    border-style: solid;
-    border-color: white;
+    border: 1px solid white;
     text-align: center;
     margin: 5px;
   }
