Fixing a few tests and padding

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -384,6 +384,7 @@ svg[aria-hidden=true],
       border: 1px solid $bookmark-white;
       text-align: center;
       margin: 5px;
+      padding: 0px;
     }
 
     > label {
